# nozzle-design-rs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  pyproject.toml  readme.md
.github/workflows/: buildtest.yml  release.yml
apps/optimumnozzle/: Cargo.toml
apps/otn/: Cargo.toml
apps/sltn/: Cargo.toml
apps/streamlinetracenozzle/: Cargo.toml
apps/streamlinetracenozzle/configs/: default.toml  shapepoints.txt
apps/streamlinetracenozzle/src/: main.rs
crates/aero/: AGENTS.md  Cargo.toml
crates/aero/benches/: moc_interior_point.rs  moc_unitprocess_irrotational.rs  streamline_intersect.rs  streamline_trace.rs
crates/aero/src/: cp.rs  isentropic.rs  lib.rs  material.rs  moc.rs  nozzle.rs
crates/aero/src/moc/: areatype.rs  charline.rs  charlines.rs  mocpoint.rs  unitprocess.rs
crates/aero/src/moc/unitprocess/: config.rs  irrotational.rs  rotational.rs
crates/aero/src/nozzle/: config.rs  constraint_nozzle.rs  expansion_section.rs  initial_line.rs  initial_section.rs  section.rs  transition_section.rs  uniform_section.rs
crates/aero/src/streamline_trace/: intersect.rs  merge.rs  mod.rs  trace.rs  weight.rs
crates/aero/tests/: nozzle_integration.rs  streamline_trace_integration.rs
crates/geometry/: AGENTS.md  Cargo.toml
crates/math/: AGENTS.md  Cargo.toml
src/: lib.rs  rootfinding.rs
src/rootfinding/: toms748.rs  (+1 more)
tests/: otn_parameters.rs  otn_sltn_integration.rs  otn_sltn_sern.rs  otn_sltn_toml.rs  otn_sltn_toml_integration.rs  sltn_shapes.rs
tools/: cal_ellipse_area.py  fit_circle.py  fit_ellipse.py  fit_plane.py  otn-plot_contour.py  plot_mocpoints.py  sltn-c2e-crosssection_plot.py  sltn-c2r-crosssection_plot.py  sltn-c2t-crosssection_plot.py  sltn-weight_funcs_plot.py
(+42 files in other folders)
