[package]
name = "aero"
version = "0.1.0"
edition = "2024"

[dependencies]
geometry = { path = "../geometry" }
math = { path = "../math" }
nalgebra = "0.34"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
criterion = "0.7"
serde_json = "1.0"

[[bench]]
name = "moc_unitprocess_irrotational"
harness = false
